<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/score"
            android:textSize="40sp"

            />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pontos"
        android:id="@+id/txtPontos"
        android:textSize="40sp"
        android:paddingLeft="10sp"
        />

    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/palavra1"
        android:id="@+id/imgWord"/>

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rdgOptions"
       >


        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOpcao1"
            android:text="@string/opcao1"
            android:layout_marginLeft="150dp"/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOpcao2"
            android:text="@string/opcao2"
            android:layout_marginLeft="150dp"
            ma/>

        <RadioButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rdbOpcao3"
            android:text="@string/opcao3"
            android:layout_marginLeft="150dp"
            android:layout_marginBottom="20dp"
            />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnPular"
            android:text="@string/pular"
            android:layout_weight="1"
            android:onClick="jump"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnProximo"
            android:text="@string/proximo"
            android:layout_weight="1"
            android:onClick="next"
            />

    </LinearLayout>

</LinearLayout>